[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>", "Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

# jax stuff
jaxlib = "0.3.0"
jax = "0.3.6"
tensorflow-gpu = "^2.9.1"  # TODO: try deleting
flax = "0.5.2"

# environment stuff
gym-minigrid = "^1.1.0"
opencv-python = "^4.6.0"  # Atari
gym = {version = "^0.25.2", extras = ["atari"]}
art = "^5.7"

# logging / sweeping
GitPython = "^3.1.27"
ray = {version = "^1.13.0", extras = ["tune"]}
run-logger = {git = "https://github.com/run-tracker/run-logger.git", rev = "main"}

# general utility
numpy = "1.22.2"  # TODO: try deleting
dollar-lambda = "^1.1.4"  # command line
returns = "^0.19.0"  # pipe/flow
tensorstore = "^0.1.22"  # checkpointing
requests-toolbelt = "^0.9.1"  # TODO: try deleting
tensorflow-datasets = "^4.6.0"
transformers = "^4.21.2"
optax = "^0.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
pre-commit = "^2.20.0"
pip = "^22.2.2"
mypy = "^0.971"
flake8 = "^5.0.4"
types-PyYAML = "^6.0.11"
ale-py = "^0.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
